tests/machine/x/kotlin/cross_join_filter.error
line 80:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/cross_join_filter.kt:80:26: error: unresolved reference: n
        println(listOf(p.n, p.l).joinToString(" "))
                         ^
/workspace/mochi/tests/machine/x/kotlin/cross_join_filter.kt:80:31: error: unresolved reference: l
        println(listOf(p.n, p.l).joinToString(" "))
                              ^

 79:     for (p in pairs) {
 80:         println(listOf(p.n, p.l).joinToString(" "))
 81:     }
